k8s/statefulset_mongo.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-realworld
  labels:
    app: realworld
    type: mongo
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: realworld
      type: mongo
  template:
    metadata:
      labels:
        app: realworld
        type: mongo
    spec:
      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
        - name: mongo-realworld
          image: mongo:2.2
          command: ["mongod"]
          args: ["--smallfiles"]
          ports:
            - containerPort: 27017
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data/db
              name: mongo-pvc
